# QSM

./: -o  -p  .cursorignore  .gitattributes  .gitignore  .hermes_continuity_state.md  .qbc  .qentl  .qentl.qbc  0001-WeQ.patch  AGENTS.md  ANALYSIS_REPORT.md  COMPILER_STATUS.md  EIGHT_STAGE_FINAL_REPORT.md  EIGHT_STAGE_STATUS_2026_07_08.md  FEATURE_ENGINEERING_REPORT.md  GIT_HEALTH_20260706.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  Makefile  PLAN.md  PROJECT_MASTER_GUIDE.md  PROJECT_STATUS.md  QCL.qbc  QCL_main.qbc  QCL_main.qentl  QCL入口.qbc  QCL引导器  QCL引导器.qbc  QCL引导器.qentl  QCL引导器_phase2.qbc  QCL引导器_simple.qbc  QCL引导器_simple.qentl  QDFS_STATUS.md  QEntL_fullstack_build_progress_20260702.md  QEntL_fullstack_build_progress_20260702_R10.md  QEntL_fullstack_build_progress_20260702_R11.md  QEntL_fullstack_build_progress_20260702_R12.md  QEntL_fullstack_build_progress_20260702_R13.md  (+242 more)
.clawhub/: lock.json
.cursor/: settings.json
.openclaw/: workspace-state.json
Installer/: autorun.inf  qentl_bootmgr  qentl_bootmgr.c  qentl_installer.qbc  qentl_installer.qentl  setup.bat
Models/: training_status.json
OS/: README.md
QCL_compiler/: qcl_lexer.qbc  qcl_opcodes.qentl  qcl_parser.qentl  qcl_parser_high.qbc
QCL模块/: qcl_bootstrap_phase2.qbc  qcl_bootstrap_phase2.qentl  qcl_bootstrap_phase2_qcircuit.qbc  qcl_bootstrap_phase2_qcircuit.qentl  qcl_compiler_circuit.qbc  qcl_compiler_circuit.qentl  qcl_compiler_phase2.qbc  qcl_lexer.qbc  (+12 more)
QEntL-env/src/compiler/: CMakeLists.txt  codegen.c  codegen.h  lexer.c  lexer.h  parser.c  parser.h  semantic.c  semantic.h  token.c
(+5005 files in other folders)
